--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "card",
-  "version": "2.1.1",
+  "name": "karanpratapsingh",
+  "version": "1.0.0",
   "description": "A personal card for Karan Pratap Singh",
   "main": "/bin/card.js",
   "bin": {
@@ -14,11 +14,10 @@
   "scripts": {
     "prepublish": "npm run build",
     "build": "node build.js",
-    "dev": "npm run build && node ./bin/card.js",
-    "lint": "standard"
+    "dev": "npm run build && node ./bin/card.js"
   },
   "keywords": [
-    "card",
+    "digital card",
     "npm",
     "npm card",
     "npx",
@@ -33,8 +32,7 @@
   ],
   "devDependencies": {
     "boxen": "^2.1.0",
-    "chalk": "^2.4.1",
-    "standard": "^12.0.1"
+    "chalk": "^2.4.1"
   },
   "bugs": {
     "url": "https://github.com/karanpratapsingh/digital-card/issues"
